实现了MCP2518FD的SPI驱动， SPI经过GPIO Matrix功能待研究

--- a/mcp2518/CMakeLists.txt
+++ b/mcp2518/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Embed CA, certificate & key directly into binary
-idf_component_register(SRCS "drv_canfdspi_api.c" "drv_spi.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "drv_spi.c" "drv_canfdspi_api.c"
+                    INCLUDE_DIRS "."
+                    REQUIRES driver)
                     
