--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@
 # in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
 
+set(EXTRA_COMPONENT_DIRS "${EXTRA_COMPONENT_DIRS} mcp2518")
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(learning-enterprise)
+
