--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ cmake_minimum_required(VERSION 3.16)
 
 #set(EXTRA_COMPONENT_DIRS "${EXTRA_COMPONENT_DIRS}" "./mcp2518" "./oled")#
 list(APPEND EXTRA_COMPONENT_DIRS mcp2518)
-list(APPEND EXTRA_COMPONENT_DIRS oled)
+list(APPEND EXTRA_COMPONENT_DIRS main)
+list(APPEND EXTRA_COMPONENT_DIRS wifi)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(learning-enterprise)
 
