--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Embed CA, certificate & key directly into binary
-idf_component_register(SRCS "wifi_enterprise_main.c"
-                    INCLUDE_DIRS "."
-                    EMBED_TXTFILES ca.pem client.crt client.key)
+idf_component_register(SRCS "wifi_enterprise_main.c" "oled.c" "can.c"
+                    INCLUDE_DIRS "." "../components/u8g2/include" "../mcp2518" "../wifi"
+                    REQUIRES driver esp_wifi wpa_supplicant esp_event nvs_flash esp_netif lwip)
                     
