--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
   "C_Cpp.intelliSenseEngine": "Tag Parser",
   "idf.adapterTargetName": "esp32s3",
-  "idf.portWin": "COM4",
+  "idf.portWin": "COM8",
   "idf.openOcdConfigs": [
     "board/esp32s3-builtin.cfg"
   ],
-  "idf.flashType": "JTAG",
+  "idf.flashType": "UART",
   "files.associations": {
     "drv_spi.h": "c",
     "string_view": "c",
@@ -38,6 +38,16 @@
     "wifi.h": "c",
     "random": "c",
     "condition_variable": "c",
-    "future": "c"
+    "future": "c",
+    "*.tcc": "c",
+    "fstream": "c",
+    "thread": "cpp",
+    "can.h": "c",
+    "msg.h": "c",
+    "stdbool.h": "c",
+    "gpio_hal.h": "c",
+    "string.h": "c",
+    "esp_rom_gpio.h": "c",
+    "esp_intr_alloc.h": "c"
   }
 }
