--- a/wifi/CMakeLists.txt
+++ b/wifi/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Embed CA, certificate & key directly into binary
 idf_component_register(SRCS "wifi.c"
-                    INCLUDE_DIRS "."
+                    INCLUDE_DIRS "." "../main/include"
                     REQUIRES driver esp_wifi wpa_supplicant esp_event nvs_flash esp_netif lwip)
                     
