--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
   "idf.adapterTargetName": "esp32s3",
-  "idf.portWin": "COM7",
+  "idf.portWin": "COM12",
   "idf.openOcdConfigs": [
     "board/esp32s3-builtin.cfg"
   ],
@@ -53,6 +53,17 @@
     "event_groups.h": "c",
     "mqtt.h": "c",
     "stdint.h": "c",
-    "cqueue.h": "c"
+    "cqueue.h": "c",
+    "CH395CMD.C": "cpp",
+    "CH395PARA_HW.C": "cpp",
+    "CH395PARA_SW.C": "cpp",
+    "CH395SPI_HW.C": "cpp",
+    "CH395SPI_SW.C": "cpp",
+    "CH395UART.C": "cpp",
+    "ch395.h": "c",
+    "ch395inc.h": "c",
+    "spi_master.h": "c",
+    "doip.h": "c",
+    "led.h": "c"
   }
 }
