uds queue space report, use internal ram for uds q

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
     "spi_master.h": "c",
     "doip.h": "c",
     "led.h": "c",
-    "cstddef": "c"
+    "cstddef": "c",
+    "queue.h": "c"
   }
 }
